# ray-tracer-challenge

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: lint_test.yml
demos/: balls_on_the_floor.py  clock_face.py  cover_image.py  first_camera.py  projectiles.py  ray_sphere.py  shaded_ray_sphere.py
ray_tracer/: __init__.py  base.py  camera.py  canvas.py  colors.py  csg.py  intersections.py  lights.py  materials.py  obj.py  patterns.py  rayple.py  rays.py  shapes.py  transforms.py  world.py
tests/: test_camera.py  test_canvas.py  test_cones.py  test_csg.py  test_cubes.py  test_cylinders.py  test_groups.py  test_intersections.py  test_lights.py  test_materials.py  test_obj.py  test_patterns.py  test_planes.py  test_rayple.py  test_rays.py  test_smooth_triangle.py  test_spheres.py  test_transforms.py  test_triangles.py  test_world.py
