[tool.poetry]
name = "Ray-Tracer-Challenge"
version = "1.0.0"
description = "A Python Implementation of Jamis Buck's Ray Tracer Challenge"
authors = ["sco1 <sco1.git@gmail.com>"]

readme = "README.md"
homepage = "https://github.com/sco1/"
repository = "https://github.com/sco1/ray-tracer-challenge"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed",
]
packages = [{include="ray_tracer"}]

include = [
    {path = "./CHANGELOG.md", format = "sdist"}
]

[tool.poetry.dependencies]
python = "^3.10"
more-itertools = "^9.1"
numpy = "^1.23"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
flake8-annotations = "*"
flake8-bugbear = "*"
flake8-docstrings = "*"
flake8-fixme = "*"
isort = "*"
mypy = "*"
pep8-naming = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-randomly = "*"
tox = "*"

[tool.black]
line-length = 100

[tool.isort]
case_sensitive = true
known_first_party = "ray_tracer,tests"
no_lines_before = "LOCALFOLDER"
order_by_type = false
profile = "black"
line_length = 100

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core>=1.2"]
build-backend = "poetry.core.masonry.api"
